--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/farook.PNG" alt="Mohammed Farook"></td>
+      <td> <img src="images/Farook.png" alt="Mohammed Farook"></td>
       <td>
         <h1>Mohammed Farook </h1>
         <p><em>Founder and CEO of <strong>SOFTDESK</strong></em></p>
