--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
       <td> <img src="images/Farook.png" alt="Mohammed Farook"></td>
       <td>
         <h1>Mohammed Farook </h1>
-        <p><em>Founder and CEO of <strong>SOFTDESK</strong></em></p>
-        <p>Hello folks I'm a freelancer who want's to learn web development from udemy and really started to liking this course
-          of Angela yu who is my instructor and she is really awesome at teaching this piece of tech</p>
+        <p><em>Founder and CEO of <strong>NOTHING</strong></em></p>
+        <p>Hello there! this is my first web page which i created using only HTML, I'm so excited to show my First work with you guys and thanks for visiting this page.</p>
       </td>
     </tr>
   </table>
 
-  <hr size="2" noshade>
+  <hr>
   <h3>Skills and Talents</h3>
   <ul>
     <li>Python Developer</li>
-    <li>Front-end web developer</li>
-    <li>Electircal design engineer</li>
+    <li>Web developer</li>
   </ul>
   <hr>
 
@@ -56,7 +54,7 @@
         python
       </td>
       <td>
-        ⭐⭐⭐⭐
+        ⭐⭐⭐
       </td>
     </tr>
     <tr>
